2023-02-14  Hannes Domani  <ssbssa@yahoo.de>

	* pickles/pe.pk: Add size_of_stack_reserve.

2023-02-14  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-parser.h (struct pkl_parser): New field `toplevel'.
	* libpoke/pkl-parser.c (pkl_parse_buffer): Set a longjmp return
	point for out-of-memory and other recoverable error conditions.
	(pkl_parse_file): Likewise.
	* libpoke/pkl-lex.l (YY_FATAL_ERROR): Longjump to parser->toplevel
	instead of aborting.

2023-02-14  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen-builtins.pks: Remove.
	* libpoke/Makefile.am (libpoke_la_SOURCES): Update accordingly.
	* libpoke/pkl-ast.h (PKL_AST_BUILTIN_TERM_GET_COLOR): Remove.
	(PKL_AST_BUILTIN_TERM_SET_COLOR): Likewise.
	(PKL_AST_BUILTIN_TERM_GET_BGCOLOR): Likewise.
	(PKL_AST_BUILTIN_TERM_SET_BGCOLOR): Likewise.
	* libpoke/pkl-gen.c (pkl_gen_ps_comp_stmt): Do not handle
	builtins.
	* libpoke/pkl-lex.l: Remove rules for
	__PKL_BUILTIN_TERM_{GET,SET}_[BG]COLOR__ tokens.
	* libpoke/pkl-tab.y (builtin): Remove rule.
	* libpoke/pkl-rt.pk (term_get_color): Rewrite using inline asm.
	(term_get_bgcolor): Likewise.
	(term_set_color): Likewise.
	(term_set_bgcolor): Likewise.

2023-02-14  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (union_deintegrator): Remove unused
	variable.

2023-02-14  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-asm.pks (ais): Rewrite.
	(eqa): Do not revert argument arrays.
	* testsuite/poke.pkl/in-10.pk: New test.
	* testsuite/poke.pkl/in-11.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2023-02-12  Jose E. Marchesi  <jemarch@gnu.org>

	* common/pk-utils.h: Include assert.h.
	* libpoke/libpoke.c: Do not include assert.h.
	* poke/pk-cmd.c: Likewise.
	* poke/pk-ios.c: Likewise.

2023-02-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-asm.c (pkl_asm_insn): Remove reference to
	pkl_asm_insn_oto.

2023-02-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-insn.def: Remove instruction PKL_INSN_OTO.